# scorpion

./: .gitignore  .gitmodules  Buffer.c  Buffer.h  CMC.c  CMakeLists.txt  README.md  Socket.h  XBL.http
Packets/: Packet.c  Packet.h
Packets/VarInt/: MCVarInt.c  MCVarInt.h  VarInt.c  VarInt.h
Packets/VarLong/: VarLong.c  VarLong.h
src/: CMC.c  Tests.c  munit.c  munit.h  scorpion.c
src/Packets/: Authentication.c  Authentication.h  Encryption.c  Encryption.h  PacketHandler.c  PacketHandler.h  Packets.c  Packets.h
src/Packets/Clientbound/: PacketHandler.c  PacketHandler.h
src/Packets/Clientbound/Login/: DisconnectLoginPacket.c  DisconnectLoginPacket.h  LoginSuccessPacket.c  LoginSuccessPacket.h  SetCompressionPacket.c  SetCompressionPacket.h
src/Packets/Clientbound/Play/: SynchronizePlayerPositionPacket.c  SynchronizePlayerPositionPacket.h
src/Packets/Clientbound/Status/: PingResponsePacket.c  PingResponsePacket.h
src/Packets/Serverbound/: OutgoingPacket.c  OutgoingPacket.h  Packets.c  Packets.h
src/Packets/Serverbound/Handshake/: HandshakePacket.c  HandshakePacket.h
src/Packets/Serverbound/Login/: LoginStartPacket.c  LoginStartPacket.h
src/Packets/Serverbound/Play/: ClientInformationPacket.c  ClientInformationPacket.h  ConfirmTeleportationPacket.c  ConfirmTeleportationPacket.h  SetPlayerPositionPacket.c  SetPlayerPositionPacket.h  SetPlayerPositionRotationPacket.c  SetPlayerPositionRotationPacket.h  SetPlayerRotationPacket.c  SetPlayerRotationPacket.h
src/Packets/Serverbound/Status/: PingRequestPacket.c  PingRequestPacket.h  StatusPacket.c  StatusPacket.h
src/Pathfinding/: AStar.c  AStar.h  Movement.c  Movement.h
src/State/: ClientState.c  ClientState.h  PlayState.c  PlayState.h  Position.c  Position.h  ServerState.c  ServerState.h  WorldState.c  WorldState.h
src/Util/: Buffer.c  Buffer.h  Logger.c  Logger.h  MCVarInt.c  MCVarInt.h  NBTParser.c  NBTParser.h  NetworkBuffer.c  NetworkBuffer.h  Socket.c  SocketWrapper.c  SocketWrapper.h
src/Util/ConnectionState/: ConnectionState.c  ConnectionState.h
src/Util/Logging/: Logger.c  Logger.h
src/Util/VarInt/: MCVarInt.c  MCVarInt.h
test/: Tests.c  Tests.h  munit.c  munit.h
